# modeling_spanish_acl

./: README.org  pyproject.toml
data/predictions/: 10L_90NL_1_1.txt  10L_90NL_1_2.txt  10L_90NL_1_3.txt  10L_90NL_1_4.txt  10L_90NL_2_1.txt  10L_90NL_2_2.txt  10L_90NL_2_3.txt  10L_90NL_2_4.txt  10L_90NL_3_1.txt  10L_90NL_3_2.txt  10L_90NL_3_3.txt  10L_90NL_3_4.txt  50L_50NL_1_1.txt  50L_50NL_1_2.txt  50L_50NL_1_3.txt  50L_50NL_1_4.txt  50L_50NL_2_1.txt  50L_50NL_2_2.txt  50L_50NL_2_3.txt  50L_50NL_2_4.txt  50L_50NL_3_1.txt  50L_50NL_3_2.txt  50L_50NL_3_3.txt  50L_50NL_3_4.txt  90L_10NL_1_1.txt  90L_10NL_1_2.txt  90L_10NL_1_3.txt  90L_10NL_1_4.txt  90L_10NL_2_1.txt  90L_10NL_2_2.txt  90L_10NL_2_3.txt  90L_10NL_2_4.txt  90L_10NL_3_1.txt  90L_10NL_3_2.txt  90L_10NL_3_3.txt  90L_10NL_3_4.txt
scripts/cell_combinations/: cell_combinations.py  cell_combo.py  combine_accuracy.py  concatenate.sh  config_new.py  plot.py
scripts/consonant_pair/: appendix_d.py  appendix_f.py  compute_avg_confusion_matrix.py  compute_metrics.py  compute_overlap_sfs.py  compute_overlap_train_test_sf.py  compute_overlap_wrong_predictions_l_shape_sf.py  compute_overlap_wrong_predictions_sf.py  compute_per_misclassified_lemmas.py  consonant_pairs.py  filter_sf_lshape_entries.py  freq_train_test_sf.py  get_lemma_test_pred_sf.py  get_shape.py  get_stems.py  l_shaped_lemma_pred_sf.py  l_shaped_lemma_sf.py  lemma_sf.py  overlap_sf_all_tokens.py  overlap_sf_l_shape_tokens.py  pred_sf.py  replace_nan.sh  src_sf.py  tgt_sf.py  train_test_sf.py
scripts/model/: evaluate.py  (+1 more)
tests/: combinations_coverage.py
(+2355 files in other folders)
