[tool.poetry]
name = "modeling_spanish_acl"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "3.8.10"
pandas = "^1.3.5"
jupyter = "^1.0.0"
unidecode = "1.3.2"
matplotlib = "3.5.0"
pyenchant = "3.2.2"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
OpenNMT-py = "1.2.0"
Sphinx = "^4.3.2"
black =  "^21.12b0"
docopt= "^0.6.2"
fairseq = "0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
